<resources>
    <string name="app_name">FilmsPagination</string>
    <string name="film_image_description">film image</string>
    <string name="main_fragment">Главная</string>
    <string name="callback_failure">Проверьте наличие сети и повторите</string>
    <string name="repeat">Повторить</string>
    <string name="year">"Год: "</string>
    <string name="rating">"Рейтинг: "</string>
    <string name="callback_genres_failure">Нет жанров</string>
    <string name="no_rating">NR</string>
    <string name="percent">%</string>
    <string name="poster">poster</string>
    <string name="overview">Overview</string>
    <string name="cast_image">cast image</string>
</resources>
